# wasm-gameoflife

./: Cargo.toml  Makefile  README.md
src/: bin.rs  lib.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
