[package]
name = "wasm-gameoflife"
version = "0.1.0"
authors = ["Nikos Filippakis <aesmade@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wasm-gameoflife"
path = "src/bin.rs"

[dependencies]
wasm-bindgen = "0.2"
rand = "0.7"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
